--- a/AirlineReservationSystemCollegeProject/AirlineReservationSystemCollegeProject.csproj
+++ b/AirlineReservationSystemCollegeProject/AirlineReservationSystemCollegeProject.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -51,6 +51,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xaml" />
@@ -77,17 +78,53 @@
     <Compile Include="Activities.Designer.cs">
       <DependentUpon>Activities.cs</DependentUpon>
     </Compile>
+    <Compile Include="Customer_information_booking.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Customer_information_booking.Designer.cs" />
+    <Compile Include="Customer_information_booking1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Customer_information_booking.resx</DependentUpon>
+    </Compile>
     <Compile Include="Flights.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Flights.Designer.cs">
       <DependentUpon>Flights.cs</DependentUpon>
     </Compile>
-    <Compile Include="login.cs">
+    <Compile Include="Forget_Password.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="login.Designer.cs">
-      <DependentUpon>login.cs</DependentUpon>
+    <Compile Include="Forget_Password.Designer.cs">
+      <DependentUpon>Forget_Password.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login_DatabaseDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Login_DatabaseDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Login_DatabaseDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Login_DatabaseDataSet2.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Login_DatabaseDataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Login_DatabaseDataSet3.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="splash.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="splash.Designer.cs">
+      <DependentUpon>splash.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Home.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Home.Designer.cs">
+      <DependentUpon>Home.cs</DependentUpon>
     </Compile>
     <Compile Include="Holidays.cs">
       <SubType>Form</SubType>
@@ -107,8 +144,31 @@
     <Compile Include="Insurance.Designer.cs">
       <DependentUpon>Insurance.cs</DependentUpon>
     </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login_DatabaseDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Login_DatabaseDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Passanger Details.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Passanger Details.Designer.cs">
+      <DependentUpon>Passanger Details.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registration_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Registration_Form.Designer.cs">
+      <DependentUpon>Registration_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Transfers.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,11 +178,24 @@
     <EmbeddedResource Include="Activities.resx">
       <DependentUpon>Activities.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Customer_information_booking.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Customer_information_booking1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Flights.resx">
       <DependentUpon>Flights.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forget_Password.resx">
+      <DependentUpon>Forget_Password.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="splash.resx">
+      <DependentUpon>splash.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Holidays.resx">
       <DependentUpon>Holidays.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Home.resx">
+      <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Hotels.resx">
       <DependentUpon>Hotels.cs</DependentUpon>
@@ -130,8 +203,11 @@
     <EmbeddedResource Include="Insurance.resx">
       <DependentUpon>Insurance.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="login.resx">
-      <DependentUpon>login.cs</DependentUpon>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Passanger Details.resx">
+      <DependentUpon>Passanger Details.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -142,9 +218,56 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Registration_Form.resx">
+      <DependentUpon>Registration_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Transfers.resx">
       <DependentUpon>Transfers.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Login_DatabaseDataSet.xsc">
+      <DependentUpon>Login_DatabaseDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Login_DatabaseDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Login_DatabaseDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Login_DatabaseDataSet.xss">
+      <DependentUpon>Login_DatabaseDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Login_DatabaseDataSet1.xsc">
+      <DependentUpon>Login_DatabaseDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Login_DatabaseDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Login_DatabaseDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Login_DatabaseDataSet1.xss">
+      <DependentUpon>Login_DatabaseDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Login_DatabaseDataSet2.xsc">
+      <DependentUpon>Login_DatabaseDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="Login_DatabaseDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Login_DatabaseDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Login_DatabaseDataSet2.xss">
+      <DependentUpon>Login_DatabaseDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="Login_DatabaseDataSet3.xsc">
+      <DependentUpon>Login_DatabaseDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="Login_DatabaseDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Login_DatabaseDataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Login_DatabaseDataSet3.xss">
+      <DependentUpon>Login_DatabaseDataSet3.xsd</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -170,6 +293,15 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Login_Database.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Login_Database_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>Login_Database.mdf</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
